load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_license//rules:license.bzl", "license")

package(default_applicable_licenses = [":license"])

license(
    name = "license",
    license_kinds = ["@rules_license//licenses/spdx:MIT"],
    license_text = "LICENSE.txt",
)

exports_files(["LICENSE.txt"])

PYG_FILES = [
    f.removeprefix("src/").removesuffix(".pyg")
    for f in glob(["**/*.pyg"])
]

filegroup(
    name = "z3_c_headers",
    srcs = glob(["src/api/z3_*.h"]),
)

[
    genrule(
        name = name,
        srcs = ["src/%s.pyg" % name],
        outs = [name + ".hpp"],
        cmd = "$(location //scripts:pyg2hpp) $(location src/%s.pyg) $$(dirname $@)" % name,
        tools = ["//scripts:pyg2hpp"],
    )
    for name in PYG_FILES
]

genrule(
    name = "api_log_macros",
    srcs = [":z3_c_headers"],
    outs = [
        "api/api_commands.cpp",
        "api/api_log_macros.cpp",
        "api/api_log_macros.h",
    ],
    cmd = "$(location //scripts:update_api) --api_output_dir $$(dirname $(location api/api_log_macros.h)) $(locations :z3_c_headers)",
    tools = ["//scripts:update_api"],
)

genrule(
    name = "ast_pattern_database",
    srcs = ["src/ast/pattern/database.smt2"],
    outs = ["ast/pattern/database.h"],
    cmd = "$(location //scripts:mk_pat_db) $(location src/ast/pattern/database.smt2) $@",
    tools = ["//scripts:mk_pat_db"],
)

genrule(
    name = "util_z3_version",
    srcs = ["//scripts:VERSION.txt"],
    outs = ["util/z3_version.h"],
    cmd = "$(location //scripts:mk_version_h_simple) $(location //scripts:VERSION.txt) $@",
    tools = ["//scripts:mk_version_h_simple"],
)

cc_library(
    name = "z3",
    srcs = glob(
        include = [
            "src/**/*.cpp",
            "src/**/*.h",
        ],
        exclude = [
            "src/api/julia/**/*",
            "src/test/**/*",
        ],
    ) + PYG_FILES + [
        ":api_log_macros",
        ":ast_pattern_database",
        ":util_z3_version",
    ],
    hdrs = [
        "src/api/c++/z3++.h",
        ":z3_c_headers",
    ],
    defines = ["_MP_INTERNAL"],
    includes = [
        "src",
        "src/api",
        "src/api/c++",
    ],
    textual_hdrs = ["src/util/trace_tags.def"],
    visibility = ["//visibility:public"],
)

# For compatibility with older versions of the BUILD file.
alias(
    name = "z3_dynamic",
    actual = "z3",
)

alias(
    name = "z3_static",
    actual = "z3",
)
